fixed button spacing

--- a/StaffingPlanner/Content/shared.css
+++ b/StaffingPlanner/Content/shared.css
@@ -256,3 +256,8 @@ a.article, a.article:hover {
         display: none;
     }
 }
+
+#space {
+    margin-left: 412px;
+    
+}
